--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 .navbar {
   display: inline-block;
   width: 100%;
+  height: 20%;
 }
 
 /** div the title of the website **/
@@ -14,6 +15,7 @@ body {
   float: left;
   align-items: center;
   cursor: pointer;
+  font-size: 30px;
 }
 
 /** div for history, music, and games **/
@@ -31,10 +33,12 @@ body {
   align-items: center;
   background-color: #75BBFB;
   border: none;
+  font-size: 18px;
+  height: 40px;
   margin-right: 20px;
-  padding-top: 10px;
+  padding-top: 6px;
   padding-right: 15px;
-  padding-bottom: 10px;
+  padding-bottom: 6px;
   padding-left: 15px;
 }
 
@@ -46,11 +50,13 @@ body {
   align-items: center;
   background-color: #FBA459;
   border: none;
+  font-size: 18px;
+  height: 40px;
   margin-right: 20px;
-  padding-top: 10px;
-  padding-right: 20px;
-  padding-bottom: 10px;
-  padding-left: 20px;
+  padding-top: 5px;
+  padding-right: 30px;
+  padding-bottom: 5px;
+  padding-left: 30px;
 }
 
 .games {
@@ -61,9 +67,21 @@ body {
   align-items: center;
   background-color: #C97BC3;
   border: none;
-  margin-right: 20px;
-  padding-top: 10px;
-  padding-right: 20px;
-  padding-bottom: 10px;
-  padding-left: 20px;
+  font-size: 18px;
+  height: 40px;
+  padding-top: 5px;
+  padding-right: 25px;
+  padding-bottom: 5px;
+  padding-left: 25px;
+}
+
+/** quotation headers**/
+.headerquote {
+  margin-bottom: 0px;
+  padding: 0px;
+}
+
+.headerquote2 {
+  margin-bottom: 0px;
+  padding: 0px;
 }
