--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   text-decoration: none;
   display: inline-flex;
   align-items: center;
-  background-color: #75BBFB;
+  background-color: #49A9FF;
   border: none;
   font-size: 18px;
   height: 40px;
@@ -48,7 +48,7 @@ body {
   text-decoration: none;
   display: inline-flex;
   align-items: center;
-  background-color: #FBA459;
+  background-color: #FF9130;
   border: none;
   font-size: 18px;
   height: 40px;
@@ -65,7 +65,7 @@ body {
   text-decoration: none;
   display: inline-flex;
   align-items: center;
-  background-color: #C97BC3;
+  background-color: #C067BA;
   border: none;
   font-size: 18px;
   height: 40px;
