--- a/style.css
+++ b/style.css
@@ -71,7 +71,6 @@ a {
   background-color: #ED344D;
 }
 
-
 /** normal state **/
 .music {
   color: black;
@@ -260,10 +259,44 @@ a {
   opacity: 0.9;
 }
 
+/** crowd on the first page **/
 .crowd {
   position: relative;
   width: 300px;
   height: 450px;
   left: 17%;
   margin-top: 275px;
+}
+
+/** container for history page **/
+.historycont {
+  display: inline-block;
+}
+
+/** img for Kanye rapping **/
+.kanyeraps {
+  float: left;
+  width: 80%;
+  height: 400px;
+  top: 154px;
+  margin-top: 20px;
+}
+
+/** img header text **/
+.historytext {
+  width: 15%;
+  float: left;
+  margin-left: 20px;
+}
+
+/** header history **/
+.historyheader {
+  font-size: 48px;
+  font-weight: bold;
+}
+
+/** history subtitle header **/
+.historyspan {
+  font-size: 24px;
+  font-weight: bold;
 }
