--- a/style.css
+++ b/style.css
@@ -332,3 +332,19 @@ a {
   font-weight: bold;
   margin-bottom: 10px;
 }
+
+/** text on music page **/
+#performance {
+  font-size: 16px;
+  text-align: center;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+/** centered video **/
+.centered-video {
+  text-align: center;
+  margin: auto;
+  top: 50%;
+  left: 50%;
+}
