--- a/style.css
+++ b/style.css
@@ -348,3 +348,11 @@ a {
   top: 50%;
   left: 50%;
 }
+
+/** typewriter thank you **/
+#thanks {
+  font-size: 14px;
+  text-align: center;
+  margin-left: 5%;
+  margin-right: 5%;
+}
