--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ a {
 /** header for games **/
 .gamesheader {
   margin: 0px;
-  color: black;
+  color: white;
   position: relative;
   font-weight: bold;
   line-height: 40px;
@@ -239,7 +239,7 @@ a {
   cursor: pointer;
   margin: 0px;
   font-size: 20px;
-  color: black;
+  color: white;
   position: relative;
   font-weight: bold;
   line-height: 40px;
